# brick-breaker-opengl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
include/brick/: Camera.h  Circle.h  Config.h  Export.h  Font.h  Macro.h  Rectangle.h  Renderer.h  Shader.h  Shape.h  Sprite.h  Texture.h  Utils.h  VertexObject.h  Window.h
include/brick/shape/: Circle.h  Rectangle.h  Shape.h
src/: Camera.c  Circle.c  Font.c  GLCheck.c  GLCheek.h  Rectangle.c  Renderer.c  Shader.c  Shape.c  Sprite.c  Texture.c  Utils.c  VertexObject.c  Window.c
src/shape/: Circle.c  Rectangle.c  Shape.c
